[package]
name = "aftp"
version = "1.0.0"
authors = ["Daniel García <dani-garcia@users.noreply.github.com>", "Matt McCoy <mattnenterprise@yahoo.com>"]
documentation = "https://docs.rs/aftp/"
repository = "https://github.com/aankor/aftp.git"
description = "Async FTP client for Rust"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"
keywords = ["ftp"]
categories = ["network-programming"]

[features]
default = ["secure"]

# Enable support of FTPS which requires openssl
secure = ["async-tls", "rustls", "webpki"]

# Add debug output (to STDOUT) of commands sent to the server
# and lines read from the server
debug_print = []

[dependencies]
lazy_static = "*"
regex = "*"
chrono = "*"
async-std = "*"

async-tls = { version = "*", optional = true }
rustls = { version = "*", optional = true }
webpki = { version = "*", optional = true }
pin-project = "*"
