[package]
name = "aftp"
version = "1.0.0"
authors = ["Daniel García <dani-garcia@users.noreply.github.com>", "Matt McCoy <mattnenterprise@yahoo.com>"]
documentation = "https://docs.rs/aftp/"
repository = "https://github.com/aankor/aftp.git"
description = "Async FTP client for Rust"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"
keywords = ["ftp"]
categories = ["network-programming"]

[features]
default = ["secure"]

# Enable support of FTPS which requires openssl
secure = ["async-tls", "rustls", "webpki"]

# Add debug output (to STDOUT) of commands sent to the server
# and lines read from the server
debug_print = []

[dependencies]
lazy_static = "1.*"
regex = "1.*"
chrono = "0.4.*"
async-std = "1.*"

async-tls = { version = "0.10.*", optional = true }
rustls = { version = "0.18.*", optional = true }
webpki = { version = "0.21.*", optional = true }
pin-project = "1.*"

[dev-dependencies]
async-std = { version ="1.*", features = ["attributes"] }